<resources>
    <string name="app_name">Aplikasi Gudang Prima Elektrik</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_about">About Me</string>
    <string name="title_activity_add">Add New Product</string>
    <string name="title_activity_detail">Detail Product</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android User</string>
    <string name="nav_header_subtitle">account@google.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_save">Save</string>
    <string name="action_buy">Buy</string>
    <string name="action_settings">Settings</string>
    <string name="action_resync">Re-Sync</string>
    <string name="action_logout">Logout</string>

    <string name="menu_list">Daftar Katalog</string>
    <string name="menu_favorites">Produk Disukai</string>
    <string name="menu_add">Add New Item</string>
    <string name="menu_history">Riwayat Perubahan</string>
    <string name="menu_about">About</string>
</resources>
