<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="Miscellaneous">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_add"
                android:title="@string/menu_add" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
